{
  "version": 4,
  "terraform_version": "1.7.0",
  "serial": 109,
  "lineage": "6dac8fc4-cab0-4fa2-434b-4788132d07f9",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "superset_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:211125356430:loadbalancer/app/superset-alb/574bbcf08918fa49",
            "arn_suffix": "app/superset-alb/574bbcf08918fa49",
            "desync_mitigation_mode": "defensive",
            "dns_name": "superset-alb-315046454.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-2:211125356430:loadbalancer/app/superset-alb/574bbcf08918fa49",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "superset-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0f643b5e59132f03c"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0bd73dbe52186e6db"
              },
              {
                "subnet_id": "subnet-0c7072ce65f5ac2ba"
              },
              {
                "subnet_id": "subnet-0fd7910f4a33e07fa"
              }
            ],
            "subnets": [
              "subnet-0bd73dbe52186e6db",
              "subnet-0c7072ce65f5ac2ba",
              "subnet-0fd7910f4a33e07fa"
            ],
            "tags": {
              "Example": "superset-k",
              "Name": "superset-k",
              "Repository": "https://superset.apache.org"
            },
            "tags_all": {
              "Example": "superset-k",
              "Name": "superset-k",
              "Repository": "https://superset.apache.org"
            },
            "vpc_id": "vpc-0f97fdc683edc5c60",
            "xff_header_processing_mode": "append",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "aws_security_group.superset_lb_sg",
            "data.aws_availability_zones.available",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "superset_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:211125356430:listener/app/superset-alb/574bbcf08918fa49/6bb54fc689c9c88c",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:211125356430:targetgroup/superset-tg/6611c3ac71ebb934",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:211125356430:listener/app/superset-alb/574bbcf08918fa49/6bb54fc689c9c88c",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:211125356430:loadbalancer/app/superset-alb/574bbcf08918fa49",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.superset_alb",
            "aws_lb_target_group.superset_tg",
            "aws_security_group.superset_lb_sg",
            "data.aws_availability_zones.available",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "superset_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:211125356430:targetgroup/superset-tg/6611c3ac71ebb934",
            "arn_suffix": "targetgroup/superset-tg/6611c3ac71ebb934",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 40,
                "matcher": "200-299",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 30,
                "unhealthy_threshold": 5
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:211125356430:targetgroup/superset-tg/6611c3ac71ebb934",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "superset-tg",
            "port": 8088,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0f97fdc683edc5c60"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "superset_lb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:211125356430:security-group/sg-0f643b5e59132f03c",
            "description": "ALB security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f643b5e59132f03c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "superset-lb-sg",
            "name_prefix": "",
            "owner_id": "211125356430",
            "revoke_rules_on_delete": false,
            "tags": {
              "Example": "superset-k",
              "Name": "superset-k",
              "Repository": "https://superset.apache.org"
            },
            "tags_all": {
              "Example": "superset-k",
              "Name": "superset-k",
              "Repository": "https://superset.apache.org"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f97fdc683edc5c60"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "superset_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:211125356430:security-group/sg-04b3afdc74f1c1644",
            "description": "Security group for Superset ECS tasks",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04b3afdc74f1c1644",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8088,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8088
              }
            ],
            "name": "superset-k-sg",
            "name_prefix": "",
            "owner_id": "211125356430",
            "revoke_rules_on_delete": false,
            "tags": {
              "Example": "superset-k",
              "Name": "superset-k",
              "Repository": "https://superset.apache.org"
            },
            "tags_all": {
              "Example": "superset-k",
              "Name": "superset-k",
              "Repository": "https://superset.apache.org"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f97fdc683edc5c60"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:211125356430:network-acl/acl-0dfeab17cbe30c818",
            "default_network_acl_id": "acl-0dfeab17cbe30c818",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0dfeab17cbe30c818",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "211125356430",
            "subnet_ids": [
              "subnet-03a50499fc00b9cbc",
              "subnet-04fb9887a7d2737f7",
              "subnet-0bd73dbe52186e6db",
              "subnet-0c7072ce65f5ac2ba",
              "subnet-0d80d9c71b023fde0",
              "subnet-0fd7910f4a33e07fa"
            ],
            "tags": {
              "Example": "superset-k",
              "Name": "superset-k",
              "Repository": "https://superset.apache.org"
            },
            "tags_all": {
              "Example": "superset-k",
              "Name": "superset-k",
              "Repository": "https://superset.apache.org"
            },
            "vpc_id": "vpc-0f97fdc683edc5c60"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:211125356430:route-table/rtb-047183d0e28b94b0a",
            "default_route_table_id": "rtb-047183d0e28b94b0a",
            "id": "rtb-047183d0e28b94b0a",
            "owner_id": "211125356430",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Example": "superset-k",
              "Name": "superset-k",
              "Repository": "https://superset.apache.org"
            },
            "tags_all": {
              "Example": "superset-k",
              "Name": "superset-k",
              "Repository": "https://superset.apache.org"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0f97fdc683edc5c60"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:211125356430:security-group/sg-0c6e43f33bc201939",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0c6e43f33bc201939",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "211125356430",
            "revoke_rules_on_delete": false,
            "tags": {
              "Example": "superset-k",
              "Name": "superset-k",
              "Repository": "https://superset.apache.org"
            },
            "tags_all": {
              "Example": "superset-k",
              "Name": "superset-k",
              "Repository": "https://superset.apache.org"
            },
            "vpc_id": "vpc-0f97fdc683edc5c60"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f93760b6bdd30ba8",
            "association_id": "eipassoc-0d0956d54a72293a1",
            "domain": "vpc",
            "id": "eipalloc-0f93760b6bdd30ba8",
            "network_border_group": "us-east-2",
            "network_interface": "eni-0b29a4db93e4af26b",
            "private_dns": "ip-10-0-48-55.us-east-2.compute.internal",
            "private_ip": "10.0.48.55",
            "public_dns": "ec2-3-142-204-24.us-east-2.compute.amazonaws.com",
            "public_ip": "3.142.204.24",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Example": "superset-k",
              "Name": "superset-k",
              "Repository": "https://superset.apache.org"
            },
            "tags_all": {
              "Example": "superset-k",
              "Name": "superset-k",
              "Repository": "https://superset.apache.org"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:211125356430:internet-gateway/igw-0c47bd06812471115",
            "id": "igw-0c47bd06812471115",
            "owner_id": "211125356430",
            "tags": {
              "Example": "superset-k",
              "Name": "superset-k",
              "Repository": "https://superset.apache.org"
            },
            "tags_all": {
              "Example": "superset-k",
              "Name": "superset-k",
              "Repository": "https://superset.apache.org"
            },
            "vpc_id": "vpc-0f97fdc683edc5c60"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f93760b6bdd30ba8",
            "association_id": "eipassoc-0d0956d54a72293a1",
            "connectivity_type": "public",
            "id": "nat-03815849f6f2fb8b7",
            "network_interface_id": "eni-0b29a4db93e4af26b",
            "private_ip": "10.0.48.55",
            "public_ip": "3.142.204.24",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0fd7910f4a33e07fa",
            "tags": {
              "Example": "superset-k",
              "Name": "superset-k",
              "Repository": "https://superset.apache.org"
            },
            "tags_all": {
              "Example": "superset-k",
              "Name": "superset-k",
              "Repository": "https://superset.apache.org"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0744c5f9b011ff88c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-03815849f6f2fb8b7",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0744c5f9b011ff88c",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0c47bd06812471115",
            "id": "r-rtb-00436ce16e8ecd0881080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-00436ce16e8ecd088",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:211125356430:route-table/rtb-0744c5f9b011ff88c",
            "id": "rtb-0744c5f9b011ff88c",
            "owner_id": "211125356430",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-03815849f6f2fb8b7",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Example": "superset-k",
              "Name": "superset-k",
              "Repository": "https://superset.apache.org"
            },
            "tags_all": {
              "Example": "superset-k",
              "Name": "superset-k",
              "Repository": "https://superset.apache.org"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f97fdc683edc5c60"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:211125356430:route-table/rtb-00436ce16e8ecd088",
            "id": "rtb-00436ce16e8ecd088",
            "owner_id": "211125356430",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c47bd06812471115",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Example": "superset-k",
              "Name": "superset-k",
              "Repository": "https://superset.apache.org"
            },
            "tags_all": {
              "Example": "superset-k",
              "Name": "superset-k",
              "Repository": "https://superset.apache.org"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f97fdc683edc5c60"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-087ad08a076e0177d",
            "route_table_id": "rtb-0744c5f9b011ff88c",
            "subnet_id": "subnet-04fb9887a7d2737f7"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02c7574a683645f09",
            "route_table_id": "rtb-0744c5f9b011ff88c",
            "subnet_id": "subnet-03a50499fc00b9cbc"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-044ad58594443a71f",
            "route_table_id": "rtb-0744c5f9b011ff88c",
            "subnet_id": "subnet-0d80d9c71b023fde0"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e655a828f0097ea8",
            "route_table_id": "rtb-00436ce16e8ecd088",
            "subnet_id": "subnet-0fd7910f4a33e07fa"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05dece102d5a55afc",
            "route_table_id": "rtb-00436ce16e8ecd088",
            "subnet_id": "subnet-0bd73dbe52186e6db"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07c688dc8f18987c5",
            "route_table_id": "rtb-00436ce16e8ecd088",
            "subnet_id": "subnet-0c7072ce65f5ac2ba"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:211125356430:subnet/subnet-04fb9887a7d2737f7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04fb9887a7d2737f7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "211125356430",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Example": "superset-k",
              "Name": "superset-k",
              "Repository": "https://superset.apache.org"
            },
            "tags_all": {
              "Example": "superset-k",
              "Name": "superset-k",
              "Repository": "https://superset.apache.org"
            },
            "vpc_id": "vpc-0f97fdc683edc5c60"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:211125356430:subnet/subnet-03a50499fc00b9cbc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03a50499fc00b9cbc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "211125356430",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Example": "superset-k",
              "Name": "superset-k",
              "Repository": "https://superset.apache.org"
            },
            "tags_all": {
              "Example": "superset-k",
              "Name": "superset-k",
              "Repository": "https://superset.apache.org"
            },
            "vpc_id": "vpc-0f97fdc683edc5c60"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:211125356430:subnet/subnet-0d80d9c71b023fde0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.32.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d80d9c71b023fde0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "211125356430",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Example": "superset-k",
              "Name": "superset-k",
              "Repository": "https://superset.apache.org"
            },
            "tags_all": {
              "Example": "superset-k",
              "Name": "superset-k",
              "Repository": "https://superset.apache.org"
            },
            "vpc_id": "vpc-0f97fdc683edc5c60"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:211125356430:subnet/subnet-0fd7910f4a33e07fa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.48.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fd7910f4a33e07fa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "211125356430",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Example": "superset-k",
              "Name": "superset-k",
              "Repository": "https://superset.apache.org"
            },
            "tags_all": {
              "Example": "superset-k",
              "Name": "superset-k",
              "Repository": "https://superset.apache.org"
            },
            "vpc_id": "vpc-0f97fdc683edc5c60"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:211125356430:subnet/subnet-0bd73dbe52186e6db",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.49.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bd73dbe52186e6db",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "211125356430",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Example": "superset-k",
              "Name": "superset-k",
              "Repository": "https://superset.apache.org"
            },
            "tags_all": {
              "Example": "superset-k",
              "Name": "superset-k",
              "Repository": "https://superset.apache.org"
            },
            "vpc_id": "vpc-0f97fdc683edc5c60"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:211125356430:subnet/subnet-0c7072ce65f5ac2ba",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.50.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c7072ce65f5ac2ba",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "211125356430",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Example": "superset-k",
              "Name": "superset-k",
              "Repository": "https://superset.apache.org"
            },
            "tags_all": {
              "Example": "superset-k",
              "Name": "superset-k",
              "Repository": "https://superset.apache.org"
            },
            "vpc_id": "vpc-0f97fdc683edc5c60"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:211125356430:vpc/vpc-0f97fdc683edc5c60",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0dfeab17cbe30c818",
            "default_route_table_id": "rtb-047183d0e28b94b0a",
            "default_security_group_id": "sg-0c6e43f33bc201939",
            "dhcp_options_id": "dopt-02f3d1b406b083cbf",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f97fdc683edc5c60",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-047183d0e28b94b0a",
            "owner_id": "211125356430",
            "tags": {
              "Example": "superset-k",
              "Name": "superset-k",
              "Repository": "https://superset.apache.org"
            },
            "tags_all": {
              "Example": "superset-k",
              "Name": "superset-k",
              "Repository": "https://superset.apache.org"
            }
          }
        }
      ]
    }
  ]
}